--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "icons": "Polymerelements/iron-icons/icons",
     "vaadin-text-field": "Polymerelements/vaadin-core/vaadin-text-field#^1.2.0",
     "paper-input": "Polymerelements/paper-input#^2.1.1",
-    "iron-form": "Polymerelements/iron-form#^2.2.1"
+    "iron-form": "Polymerelements/iron-form#^2.2.1",
+    "css-buttons": "components#*"
   },
   "resolutions": {
     "polymer": "^2.0.0"
